7章まで完了

--- a/my-next-project/app/globals.css
+++ b/my-next-project/app/globals.css
@@ -1,23 +1,21 @@
 :root {
-  --font-mono: ui-monospace,
-  menlo,monaco,"cascadia Mono","segoe UI Mono","Roboto Mono","oxygen Mono",
-  "Ubuntu Monospace","Source Code pro",
-    "Fira Mono","Droid Sans Mono","Courier New",monospace;
-
-    --color-text-main: #333;
-    --color-text-sub: #999;
-    --color-text-unpainted: #fff;
-    --color-text-error: rgb(255, 255, 255);
-    --color-bg-main: #fff;
-    --color-bg-sub: #f3f3f3;
-    --color-bg-code: #ff0000;
-    --color-bg-painted: #333;
-    --color-border-dark:#333;
-    --color-border:#ddd;
-    --color-border-light:#f3f3f3;
-    --color-current:#eee;
-    --color-button-primary:#333;
-    --border-radius :4px;
+  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
+    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
+    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+  --color-text-main: #333;
+  --color-text-sub: #999;
+  --color-text-unpainted: #fff;
+  --color-text-error: #f33;
+  --color-bg-main: #fff;
+  --color-bg-sub: #f3f3f3;
+  --color-bg-code: #fafafa;
+  --color-bg-painted: #333;
+  --color-border-dark: #333;
+  --color-border: #ddd;
+  --color-border-light: #f3f3f3;
+  --color-current: #eee;
+  --color-button-primary: #333;
+  --border-radius: 4px;
 }
 
 * {
@@ -28,36 +26,28 @@
 
 html,
 body {
-  max-width : 100vw;
+  max-width: 100vw;
   overflow-x: hidden;
 }
 
 body {
-  font-family:
-    -apple-system,BlinkMacSystemFont,
-    "Helvetica Neue",
-    YuGothic,
-    "ビラギノ角ゴ　ProN W3",
-    Ariel,
-    "メイリオ",
-    Meriyo,
-    Sans-serif;
-  color:var(--color-text-main);
+  font-family: -apple-system, BlinkMacSystemFont, 'Helvetica Neue', YuGothic,
+    'ヒラギノ角ゴ ProN W3', Hiragino Kaku Gothic ProN, Arial, 'メイリオ', Meiryo,
+    sans-serif;
+  color: var(--color-text-main);
   line-height: 1.8;
 }
 
 code {
-  font-family: menlo,
-  inconsolata,  monospace;
+  font-family: menlo, inconsolata, monospace;
 }
 
-a{
-  color:inherit;
+a {
+  color: inherit;
   text-decoration: none;
 }
 
 ol,
 ul {
-  list-style:none;
+  list-style: none;
 }
-
